--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -17,16 +17,206 @@
 }
 
 #updateModal {
-  padding: 14px;
+  margin: 0 auto;
+  padding: 20px;
+  width: 450px;
+}
+
+:focus {
+  outline: 0;
 }
 
 #fucksCounterInput {
-  width: 70%;
+  width: 100%;
   display: block;
   margin-bottom: 24px;
 }
 
 #submitButton {
+  -moz-box-shadow: inset 0px 34px 0px -15px #3dc21b;
+  -webkit-box-shadow: inset 0px 34px 0px -15px #3dc21b;
+  box-shadow: inset 0px 34px 0px -15px #3dc21b;
+  background-color: #44c767;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 9px 76px;
+  text-decoration: none;
+  text-shadow: 0px -1px 0px #2f6627;
   width: 100%;
-  height: 50px;
+}
+#submitButton:hover {
+  background-color: #5cbf2a;
+}
+#submitButton:active {
+  position: relative;
+  top: 1px;
+}
+
+#buttonRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#refreshButton {
+  -moz-box-shadow: 3px 4px 0px 0px #29bbff;
+  -webkit-box-shadow: 3px 4px 0px 0px #29bbff;
+  box-shadow: 3px 4px 0px 0px #29bbff;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #2dabf9),
+    color-stop(1, #0688fa)
+  );
+  background: -moz-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+  background: -webkit-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+  background: -o-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+  background: -ms-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+  background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2dabf9', endColorstr='#0688fa',GradientType=0);
+  background-color: #2dabf9;
+  -moz-border-radius: 18px;
+  -webkit-border-radius: 18px;
+  border-radius: 18px;
+  border: 1px solid #0b0e07;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  padding: 8px 35px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #263666;
+}
+#refreshButton:hover {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #0688fa),
+    color-stop(1, #2dabf9)
+  );
+  background: -moz-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+  background: -webkit-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+  background: -o-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+  background: -ms-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+  background: linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0688fa', endColorstr='#2dabf9',GradientType=0);
+  background-color: #0688fa;
+}
+#refreshButton:active {
+  position: relative;
+  top: 1px;
+}
+
+#updateButton {
+  margin-left: 40px;
+  -moz-box-shadow: 3px 4px 0px 0px #3dc21b;
+  -webkit-box-shadow: 3px 4px 0px 0px #3dc21b;
+  box-shadow: 3px 4px 0px 0px #3dc21b;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #44c767),
+    color-stop(1, #5cbf2a)
+  );
+  background: -moz-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
+  background: -webkit-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
+  background: -o-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
+  background: -ms-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
+  background: linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#44c767', endColorstr='#5cbf2a',GradientType=0);
+  background-color: #44c767;
+  -moz-border-radius: 18px;
+  -webkit-border-radius: 18px;
+  border-radius: 18px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 20px;
+  padding: 10px 40px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+#updateButton:hover {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #5cbf2a),
+    color-stop(1, #44c767)
+  );
+  background: -moz-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+  background: -webkit-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+  background: -o-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+  background: -ms-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+  background: linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5cbf2a', endColorstr='#44c767',GradientType=0);
+  background-color: #5cbf2a;
+}
+#updateButton:active {
+  position: relative;
+  top: 1px;
+}
+
+#clearButton {
+  margin-right: 40px;
+  -moz-box-shadow: 3px 4px 0px 0px #8a2a21;
+  -webkit-box-shadow: 3px 4px 0px 0px #8a2a21;
+  box-shadow: 3px 4px 0px 0px #8a2a21;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #c62d1f),
+    color-stop(1, #f24437)
+  );
+  background: -moz-linear-gradient(top, #c62d1f 5%, #f24437 100%);
+  background: -webkit-linear-gradient(top, #c62d1f 5%, #f24437 100%);
+  background: -o-linear-gradient(top, #c62d1f 5%, #f24437 100%);
+  background: -ms-linear-gradient(top, #c62d1f 5%, #f24437 100%);
+  background: linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24437',GradientType=0);
+  background-color: #c62d1f;
+  -moz-border-radius: 18px;
+  -webkit-border-radius: 18px;
+  border-radius: 18px;
+  border: 1px solid #d02718;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 20px;
+  padding: 10px 40px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #810e05;
+}
+#clearButton:hover {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #f24437),
+    color-stop(1, #c62d1f)
+  );
+  background: -moz-linear-gradient(top, #f24437 5%, #c62d1f 100%);
+  background: -webkit-linear-gradient(top, #f24437 5%, #c62d1f 100%);
+  background: -o-linear-gradient(top, #f24437 5%, #c62d1f 100%);
+  background: -ms-linear-gradient(top, #f24437 5%, #c62d1f 100%);
+  background: linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24437', endColorstr='#c62d1f',GradientType=0);
+  background-color: #f24437;
+}
+#clearButton:active {
+  position: relative;
+  top: 1px;
 }
