--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -115,108 +115,58 @@
   top: 1px;
 }
 
+#clearButton,
 #updateButton {
-  margin-left: 40px;
-  -moz-box-shadow: 3px 4px 0px 0px #3dc21b;
-  -webkit-box-shadow: 3px 4px 0px 0px #3dc21b;
-  box-shadow: 3px 4px 0px 0px #3dc21b;
+  -moz-box-shadow: 0px 1px 0px 0px #1c1b18;
+  -webkit-box-shadow: 0px 1px 0px 0px #1c1b18;
+  box-shadow: 0px 1px 0px 0px #1c1b18;
   background: -webkit-gradient(
     linear,
     left top,
     left bottom,
-    color-stop(0.05, #44c767),
-    color-stop(1, #5cbf2a)
+    color-stop(0.05, #eae0c2),
+    color-stop(1, #ccc2a6)
   );
-  background: -moz-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-  background: -webkit-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-  background: -o-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-  background: -ms-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-  background: linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#44c767', endColorstr='#5cbf2a',GradientType=0);
-  background-color: #44c767;
-  -moz-border-radius: 18px;
-  -webkit-border-radius: 18px;
-  border-radius: 18px;
-  border: 1px solid #18ab29;
+  background: -moz-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+  background: -webkit-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+  background: -o-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+  background: -ms-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+  background: linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eae0c2', endColorstr='#ccc2a6',GradientType=0);
+  background-color: #eae0c2;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+  border: 2px solid #333029;
   display: inline-block;
   cursor: pointer;
-  color: #ffffff;
+  color: #505739;
   font-family: Arial;
-  font-size: 20px;
-  padding: 10px 40px;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 12px 21px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #2f6627;
+  text-shadow: 0px 1px 0px #ffffff;
 }
+#clearButton:hover,
 #updateButton:hover {
   background: -webkit-gradient(
     linear,
     left top,
     left bottom,
-    color-stop(0.05, #5cbf2a),
-    color-stop(1, #44c767)
+    color-stop(0.05, #ccc2a6),
+    color-stop(1, #eae0c2)
   );
-  background: -moz-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
-  background: -webkit-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
-  background: -o-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
-  background: -ms-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
-  background: linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5cbf2a', endColorstr='#44c767',GradientType=0);
-  background-color: #5cbf2a;
+  background: -moz-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+  background: -webkit-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+  background: -o-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+  background: -ms-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+  background: linear-gradient(to bottom, #ccc2a6 5%, #eae0c2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ccc2a6', endColorstr='#eae0c2',GradientType=0);
+  background-color: #ccc2a6;
 }
+#clearButton:active,
 #updateButton:active {
-  position: relative;
-  top: 1px;
-}
-
-#clearButton {
-  margin-right: 40px;
-  -moz-box-shadow: 3px 4px 0px 0px #8a2a21;
-  -webkit-box-shadow: 3px 4px 0px 0px #8a2a21;
-  box-shadow: 3px 4px 0px 0px #8a2a21;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0.05, #c62d1f),
-    color-stop(1, #f24437)
-  );
-  background: -moz-linear-gradient(top, #c62d1f 5%, #f24437 100%);
-  background: -webkit-linear-gradient(top, #c62d1f 5%, #f24437 100%);
-  background: -o-linear-gradient(top, #c62d1f 5%, #f24437 100%);
-  background: -ms-linear-gradient(top, #c62d1f 5%, #f24437 100%);
-  background: linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24437',GradientType=0);
-  background-color: #c62d1f;
-  -moz-border-radius: 18px;
-  -webkit-border-radius: 18px;
-  border-radius: 18px;
-  border: 1px solid #d02718;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 20px;
-  padding: 10px 40px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #810e05;
-}
-#clearButton:hover {
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0.05, #f24437),
-    color-stop(1, #c62d1f)
-  );
-  background: -moz-linear-gradient(top, #f24437 5%, #c62d1f 100%);
-  background: -webkit-linear-gradient(top, #f24437 5%, #c62d1f 100%);
-  background: -o-linear-gradient(top, #f24437 5%, #c62d1f 100%);
-  background: -ms-linear-gradient(top, #f24437 5%, #c62d1f 100%);
-  background: linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24437', endColorstr='#c62d1f',GradientType=0);
-  background-color: #f24437;
-}
-#clearButton:active {
   position: relative;
   top: 1px;
 }
